Create an etch-a-sketch online

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     <header>Etch-a-Sketch!</header>
-    <div id="container"></div>
+    <div class="buttonWrapper">
+        <button id="gridButton">Redraw Grid</button>
+    </div>
+    <div class="outer">
+        <div id="container"></div>
+    </div>
 </body>
 </html>
